Bug 117668 - Writer gets confused when hiding multiple sections
Summary: Writer gets confused when hiding multiple sections
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0 all versions
Hardware: All All
: medium normal
Assignee: Serge Krot (CIB)
URL:
Whiteboard: target:6.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-17 12:24 UTC by Thorsten Behrens (allotropia)
Modified: 2018-05-22 13:04 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thorsten Behrens (allotropia) 2018-05-17 12:24:58 UTC
Description:
Hiding sections by index seems busted, if part of the content is already hidden. Writer gets thusly confused, and shows parts regardless when you do that iteratively.

Problem shows when using WollMux, but it's a generic implementation issue.



Actual Results:  
-

Expected Results:
-


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Commit Notification 2018-05-17 12:27:24 UTC
Serge Krot committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=27c9370b5fd00b851582e4163907656286e8c581

tdf#117668 Fix wrong number of sections in document

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.