tdf#117668 Fix wrong number of sections in document

Change-Id: Ia2b8a1376f4f2b4e790598255ae69fb6ee92d23d
Reviewed-on: https://gerrit.libreoffice.org/54423
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Tested-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>